# progressive-server

./: .clang-format  .gitignore  API.md  CMakeLists.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml
contrib/: benchmark.sh
src/: CMakeLists.txt  main.cpp
src/progressive/: account_data_manager.cpp  account_management.cpp  account_validity.cpp  acls.cpp  admin_api.cpp  admin_rooms.cpp  admin_users.cpp  all_endpoints.cpp  all_stores.cpp  appservice.cpp  appservice_api.cpp  background_updates.cpp  ban_list_manager.cpp  bridge_admin.cpp  cache_manager.cpp  client_api_router.cpp  consent_server.cpp  content_scanner.cpp  crypto_manager.cpp  data_structures.cpp  database_migration_engine.cpp  db_pool.cpp  deltachat_daemon.cpp  device_dehydration.cpp  device_management.cpp  device_manager_v2.cpp  e2e_encryption.cpp  e2e_keys.cpp  email_templates.cpp  error_handler.cpp  event_auth.cpp  event_context.cpp  event_filter_engine.cpp  event_redaction.cpp  event_relations.cpp  event_search.cpp  event_signing.cpp  federation_discovery.cpp  federation_keys.cpp  federation_processor.cpp  (+79 more)
src/progressive/activitypub/: signing.hpp  types.cpp  types.hpp
src/progressive/admin/: admin_media_tools.cpp  admin_monitoring.cpp  admin_room_directory.cpp  admin_users_v2.cpp  cache_db_profiling.cpp  debug_admin_tools.cpp  server_operations.cpp  user_admin_tools.cpp
src/progressive/appservice/: appservice_api.cpp
src/progressive/auth/: auth.cpp  auth.hpp  device_session_manager.cpp  email_identity.cpp  email_identity.hpp  event_auth.cpp  event_auth.hpp  interactive_auth_terms.cpp  login_token_manager.cpp  password_policy_validity.cpp  registration_pipeline.cpp
src/progressive/bg/: runner.cpp  runner.hpp
src/progressive/captcha/: captcha.hpp
src/progressive/config/: config.cpp  config.hpp  database_config.cpp  database_config.hpp  server_config.cpp  server_config.hpp  yaml.cpp  yaml.hpp
src/progressive/crypto/: e2e_encryption_v2.cpp  key.cpp  key.hpp  key_backup_bootstrap.cpp  room_keys_device_keys.cpp  signing.cpp  signing.hpp  signing_key_management.cpp
src/progressive/deltachat/: deltachat.cpp  deltachat.hpp  deltachat_addressbook.cpp  deltachat_chat_ops.cpp  deltachat_commands.cpp  deltachat_config_backup.cpp  deltachat_contacts_multi.cpp  deltachat_core_v2.cpp  deltachat_crypto.cpp  deltachat_device_backup.cpp  deltachat_full.cpp  deltachat_full_b.cpp  deltachat_full_c.cpp  deltachat_html_composer.cpp  deltachat_imap_download.cpp  deltachat_imap_folders.cpp  deltachat_imap_smtp.cpp  deltachat_location_webxdc.cpp  deltachat_message_utils.cpp  deltachat_provider_oauth.cpp  deltachat_send_contacts.cpp  deltachat_send_pipeline.cpp  deltachat_status_tracking.cpp  deltachat_sync.cpp
src/progressive/email/: config.hpp
src/progressive/events/: event.cpp  event.hpp  event_auth_rules.cpp  event_builder_v2.cpp  event_factory.cpp  event_factory.hpp  event_relations.cpp  signatures.cpp  signatures.hpp  unsafe_event.cpp  unsafe_event.hpp
src/progressive/federation/: auth.cpp  auth.hpp  backfill.cpp  backfill.hpp  fed_transport.cpp  fed_transport.hpp  federation_client.cpp  federation_client.hpp  federation_endpoints.cpp  federation_full.cpp  federation_s2s_v2.cpp  federation_server.cpp  federation_server.hpp  sender.cpp  sender.hpp
src/progressive/filters/: filter_engine.cpp
src/progressive/handlers/: account_sync_directory.cpp  account_tags_push.cpp  admin_handler.cpp  admin_handler.hpp  admin_server_tools.cpp  auth_handler.cpp  auth_handler.hpp  device_handler.cpp  device_handler.hpp  e2e_keys_handler.cpp  e2e_keys_handler.hpp  event_creation.cpp  event_creation.hpp  forgotten_peek_relations.cpp  full_handlers.cpp  full_handlers.hpp  guest_peek_handlers.cpp  handlers_core.cpp  handlers_core.hpp  handlers_core_full.cpp  handlers_core_v2.cpp  handlers_identity.cpp  handlers_identity.hpp  handlers_misc.cpp  handlers_misc.hpp  handlers_misc_full.cpp  handlers_sync_v2.cpp  initial_sync_visibility.cpp  membership_lazy_loading.cpp  message_handler.cpp  message_handler.hpp  message_handlers.cpp  more_handlers.cpp  more_handlers.hpp  receipts_ephemeral.cpp  relay_p2p_sync.cpp  remaining_handlers.cpp  remaining_handlers.hpp  room_directory_handler.cpp  room_discovery.cpp  (+11 more)
src/progressive/http/: http_client_pool.cpp  router.cpp  router.hpp  server.cpp  server.hpp
tests/: CMakeLists.txt  integration.sh  test_batch2.cpp  test_matrix_full.cpp  test_protocol.cpp  test_push.cpp  test_real_synapse.cpp  test_state.cpp  test_synapse_port.cpp  test_types.cpp
(+255 files in other folders)
